[project]
name = "project-name"
version = "0.1.0"
description = "My PII detection project"
readme = "README.md"
authors = [
    { name = "Alex Lee", email = "ajlee3141@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "blank>=0.1.0",
    "gliner>=0.2.19",
    "pytest>=8.3.5",
]

[project.scripts]
project-name = "project_name:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = "test_*"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
